tests/resource/invalid/type/class/one_tuple_not_assigned_to.mamba
class X
    def (a, b): (Int, Int)

    def init(self, x: Int) =>
        self.a = x
